--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Pushster', sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #1e1e2a;
 }
 
@@ -12,10 +12,10 @@ body {
 .header-container {
     height: 100vh;
     width: 100vw;
-    background-color: rgb(161, 90, 228);
-    background-image: url('./imagens/gus.png');
+    background-color: rgb(7, 162, 223);
+    background-image: url('./imagens/escudo.png');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: right;
     background-size: contain;
     display: flex;
     flex-direction: column;
@@ -57,3 +57,151 @@ h2 {
 a:hover {
     background-color: #ffffff;
 }
+
+/* Menu lateral (direita) */
+
+.checkbox-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkbox {
+    height: 100px;
+    width: 100px;
+    position: absolute ;
+    right: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    z-index: 9999;
+    transition: 400ms ease-in-out 0s;
+    
+}
+
+.checkbox .trace {
+    width: 50px;
+    height: 5px;
+    background-color: #1e1e2a;
+    position: absolute;
+    border-radius: 4px;
+    transition: 0.5s ease-in-out;
+}
+
+.checkbox .trace:nth-child(1) {
+    top: 26px;
+    transform: rotate(0);
+}
+
+.checkbox .trace:nth-child(2) {
+    top: 46px;
+    transform: rotate(0);
+}
+
+.checkbox .trace:nth-child(3) {
+    top: 66px;
+    transform: rotate(0);
+}
+
+.checkbox .trace:nth-child(4) {
+    top: 86px;
+    transform: rotate(0);
+}
+
+#toggle {
+    display: nome;
+}
+
+
+
+/* Menu */
+
+.menu {
+    position: absolute;
+    top: 28px;
+    right: 30px;
+    background-color: transparent;
+    height: 4px;
+    width: 10px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 0px 0px #ffffff;
+    z-index: -1;
+    transition: 400ms ease-in-out 0s;
+}
+
+.menu-items {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    opacity: 0;
+    visibility: hidden;
+    transition: 400ms ease-in-out 0s;
+}
+
+.menu-items ul {
+    list-style-type: none;
+}
+
+menuitem ul li a {
+    margin: 10px 0;
+    color: #1e1e2a;
+    text-decoration: nome;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 40px;
+} 
+
+/* Animação do menu */
+
+#toggle:checked + .checkbox .trace:nth-child(1) {
+    transform: rotate(45deg);
+    top: 47px;
+}
+
+#toggle:checked + .checkbox .trace:nth-child(2) {
+    transform: translate(100px);
+    width: 30px;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#toggle:checked + .checkbox .trace:nth-child(3) {
+    transform: rotate(-45deg);
+    top: 48px;
+}
+
+/* Opcional do menu hamburguer para os traços virarem um asterisco. 
+#toggle:checked + .checkbox .trace:nth-child(4) {
+    transform: rotate(-90deg);
+    top: 49px;
+}
+*/
+
+#toggle:checked + .checkbox {
+    background-color: #ffffff;
+}
+
+#toggle:checked ~ .menu {
+    box-shadow: 0px 0px 0px 100vmax #ffffff;
+    z-index: 1;
+}
+
+#toggle:checked ~ .menu-items {
+    visibility: visible;
+    opacity: 1;
+}
+
+
+
+
+
+
+
+
